--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.github.trevjonez.composer-gradle-plugin:plugin:0.10.0'
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
     }
 }
 
@@ -87,6 +87,11 @@ dependencies {
 
     //TESTING
     debugImplementation androidTestDependencies.fragmentTesting
+
+    //Use Java library for unit testing instead of Android to avoid requesting Android Device Timezone
+    testImplementation(testDependencies.threeTenBP) {
+        exclude group:'com.jakewharton.threetenabp', module:'threetenabp'
+    }
 
     testImplementation testDependencies.junit
     testImplementation testDependencies.mockk
