--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -13,6 +13,11 @@ dependencies {
 
     testImplementation testDependencies.junit
     testImplementation testDependencies.mockk
+
+    //Use Java library for unit testing instead of Android to avoid requesting Android Device Timezone
+    testImplementation(testDependencies.threeTenBP) {
+        exclude group:'com.jakewharton.threetenabp', module:'threetenabp'
+    }
 }
 repositories {
     mavenCentral()
