--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,7 +9,7 @@ ext {
 
     constraint_layout_version = '2.0.0-alpha3'
     fragment_version = '1.1.0-alpha03'
-    recyclerview_version='1.0.0'
+    recyclerview_version = '1.0.0'
     glide_version = '4.9.0'
 
     coroutines_version = '1.1.1'
@@ -32,7 +32,8 @@ ext {
     uiAutomator_version = '2.2.0'
     junit_version = '4.12'
 
-    threeTenABP_version = '1.1.2'
+    threeTenABP_version = '1.2.0'
+    threeTenBP_version = '1.3.2'
 
     rxjava_version = '2.2.7'
     rxjava_android_version = '2.1.1'
@@ -68,9 +69,10 @@ ext {
     ]
 
     testDependencies = [
-            junit: "junit:junit:$junit_version",
-            mockk: "io.mockk:mockk:$mockk_version",
-            coreTesting: "androidx.arch.core:core-testing:$aac_core_version"
+            junit      : "junit:junit:$junit_version",
+            mockk      : "io.mockk:mockk:$mockk_version",
+            coreTesting: "androidx.arch.core:core-testing:$aac_core_version",
+            threeTenBP : "org.threeten:threetenbp:$threeTenBP_version"
     ]
 
     androidTestDependencies = [
@@ -81,7 +83,7 @@ ext {
             testRules      : "androidx.test:rules:$testrunner_version",
             espressoContrib: "androidx.test.espresso:espresso-contrib:$espresso_contrib_version",
             fragmentTesting: "androidx.fragment:fragment-testing:$fragment_testing_version",
-            uiAutomator: "androidx.test.uiautomator:uiautomator:$uiAutomator_version"
+            uiAutomator    : "androidx.test.uiautomator:uiautomator:$uiAutomator_version"
     ]
 
     injectionDependencies = [
@@ -97,13 +99,13 @@ ext {
     ]
 
     uiDependencies = [
-            constraintLayout: "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
-            fragment        : "androidx.fragment:fragment:$fragment_version",
-            glide           : "com.github.bumptech.glide:glide:$glide_version",
-            glidecompiler   : "com.github.bumptech.glide:compiler:$glide_version",
-            recyclerview    : "com.android.support:recyclerview-v7:$recyclerview_version",
-            fotoApparat     : "io.fotoapparat:fotoapparat:$fotoApparat_version",
-            fotoApparatAdapters     : "io.fotoapparat.fotoapparat:adapter-rxjava2:$fotoApparat_version"
+            constraintLayout   : "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
+            fragment           : "androidx.fragment:fragment:$fragment_version",
+            glide              : "com.github.bumptech.glide:glide:$glide_version",
+            glidecompiler      : "com.github.bumptech.glide:compiler:$glide_version",
+            recyclerview       : "com.android.support:recyclerview-v7:$recyclerview_version",
+            fotoApparat        : "io.fotoapparat:fotoapparat:$fotoApparat_version",
+            fotoApparatAdapters: "io.fotoapparat.fotoapparat:adapter-rxjava2:$fotoApparat_version"
     ]
 
 }
