--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,6 +10,7 @@ ext {
     constraint_layout_version = '2.0.0-alpha3'
     fragment_version = '1.1.0-alpha03'
     recyclerview_version='1.0.0'
+    cardview_version='1.0.0'
     glide_version = '4.9.0'
 
     coroutines_version = '1.1.1'
@@ -48,8 +49,7 @@ ext {
 
     commonDependencies = [
             kotlin            : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
-
-            rxjava            : "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version",
+            rxjava            : "io.reactivex.rxjava2:rxjava:$rxjava_version",
             rxandroid         : "io.reactivex.rxjava2:rxandroid:$rxjava_android_version",
 
             threeTenABP       : "com.jakewharton.threetenabp:threetenabp:$threeTenABP_version",
@@ -93,7 +93,10 @@ ext {
             fragment        : "androidx.fragment:fragment:$fragment_version",
             glide           : "com.github.bumptech.glide:glide:$glide_version",
             glidecompiler   : "com.github.bumptech.glide:compiler:$glide_version",
-            recyclerview    : "com.android.support:recyclerview-v7:$recyclerview_version"
+            recyclerview    : "androidx.recyclerview:recyclerview:$recyclerview_version",
+            cardView        : "androidx.cardview:cardview:$cardview_version"
     ]
+
+
 
 }
