--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -38,6 +38,7 @@ ext {
 
     rxjava_version = '2.2.7'
     rxjava_android_version = '2.1.1'
+    rxkotlin_version = '2.3.0'
 
     room_runtime_version = '2.1.0-alpha04'
     room_compiler_version = '2.1.0-alpha03'
@@ -57,6 +58,7 @@ ext {
 
             rxjava            : "io.reactivex.rxjava2:rxjava:$rxjava_version",
             rxandroid         : "io.reactivex.rxjava2:rxandroid:$rxjava_android_version",
+            rxkotlin          : "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version",
 
             threeTenABP       : "com.jakewharton.threetenabp:threetenabp:$threeTenABP_version",
 
@@ -107,8 +109,8 @@ ext {
             recyclerview       : "com.android.support:recyclerview-v7:$recyclerview_version",
             fotoApparat        : "io.fotoapparat:fotoapparat:$fotoApparat_version",
             fotoApparatAdapters: "io.fotoapparat.fotoapparat:adapter-rxjava2:$fotoApparat_version",
-            rv_selection    : "androidx.recyclerview:recyclerview-selection:$recyclerview_version",
-            cardView        : "androidx.cardview:cardview:$cardview_version",
+            rv_selection       : "androidx.recyclerview:recyclerview-selection:$recyclerview_version",
+            cardView           : "androidx.cardview:cardview:$cardview_version",
     ]
 
 }
