refactor: create util module for test factories
The util module provide factories for domain objects so other modules
can easily create them for their tests.
It also contains some extension functions.

The database layer still has its own DataFactory because it's the only
one that knows about the Entities.

FAITH-35 #close

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation project(':database')
     implementation project(':storage')
     implementation project(':draw')
+    implementation project(':util')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
