--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@
 apply from: 'dependencies.gradle'
 apply plugin: "com.github.ben-manes.versions"
 buildscript {
+    ext.kotlin_version = '1.0.0'
     repositories {
         google()
         jcenter()
@@ -14,6 +15,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.21"
 
         classpath "com.github.ben-manes:gradle-versions-plugin:0.21.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
