--- a/util/build.gradle
+++ b/util/build.gradle
@@ -15,12 +15,13 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
@@ -28,26 +29,17 @@ android {
 
 dependencies {
     implementation project(':domain')
-    implementation project(':storage')
-    implementation project(':util')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    def commonDependencies = rootProject.ext.commonDependencies
-    def injectionDependencies = rootProject.ext.injectionDependencies
-
     implementation commonDependencies.kotlin
     implementation commonDependencies.threeTenABP
-    implementation commonDependencies.rxjava
-
-    implementation injectionDependencies.koin
-
-    testImplementation testDependencies.junit
-    testImplementation testDependencies.mockk
 
     //Use Java library for unit testing instead of Android to avoid requesting Android Device Timezone
     testImplementation(testDependencies.threeTenBP) {
-        exclude group:'com.jakewharton.threetenabp', module:'threetenabp'
+        exclude group: 'com.jakewharton.threetenabp', module: 'threetenabp'
     }
-
+}
+repositories {
+    mavenCentral()
 }
