--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,7 @@ dependencies {
     implementation uiDependencies.fragment
     implementation uiDependencies.fotoApparat
     implementation uiDependencies.fotoApparatAdapters
+    implementation uiDependencies.navigation
 
     //TESTING
     debugImplementation androidTestDependencies.fragmentTesting
