--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,6 +12,7 @@ ext {
     recyclerview_version = '1.0.0'
     glide_version = '4.9.0'
     cardview_version = '1.0.0'
+    material_version='1.0.0-rc01'
 
     coroutines_version = '1.1.1'
     coroutines_android_version = '1.1.1'
@@ -109,6 +110,7 @@ ext {
             fotoApparatAdapters: "io.fotoapparat.fotoapparat:adapter-rxjava2:$fotoApparat_version",
             rv_selection    : "androidx.recyclerview:recyclerview-selection:$recyclerview_version",
             cardView        : "androidx.cardview:cardview:$cardview_version",
+            navigation      :  "com.google.android.material:material:$material_version"
     ]
 
 }
