--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,7 +12,7 @@ ext {
     recyclerview_version = '1.0.0'
     glide_version = '4.9.0'
     cardview_version = '1.0.0'
-    material_version='1.0.0-rc01'
+    material_version='1.0.0'
 
     coroutines_version = '1.1.1'
     coroutines_android_version = '1.1.1'
