--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,15 @@
 apply from: 'dependencies.gradle'
 apply plugin: "com.github.ben-manes.versions"
 buildscript {
-    ext.kotlin_version = '1.0.0'
+    ext.kotlin_version = '1.3.31'
+    ext.gradle_version = '3.4.0'
     repositories {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.21"
-
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "com.github.ben-manes:gradle-versions-plugin:0.21.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
