--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,9 +4,6 @@ ext {
     androidMinSdkVersion = 19
     androidTargetSdkVersion = 28
 
-    kotlin_version = '1.3.11'
-    gradle_version = '3.3.1'
-
     constraint_layout_version = '2.0.0-alpha3'
     fragment_version = '1.1.0-alpha03'
     recyclerview_version = '1.0.0'
@@ -19,7 +16,7 @@ ext {
 
     koin_version = '1.0.2'
 
-    aac_core_version = '2.0.0-rc01'
+    aac_core_version = '2.1.0-alpha02'
 
     lifecycle_version = '2.0.0'
 
@@ -35,7 +32,7 @@ ext {
     junit_version = '4.12'
 
     threeTenABP_version = '1.2.0'
-    threeTenBP_version = '1.3.2'
+    threeTenBP_version = '1.3.8'
 
     rxjava_version = '2.2.7'
     rxjava_android_version = '2.1.1'
@@ -46,11 +43,11 @@ ext {
     room_testing_version = '2.1.0-alpha03'
     room_rxjava_version = '2.1.0-alpha03'
 
-    ktlint_version = '0.30.0'
+    ktlint_version = '0.31.0'
 
-    mockk_version = '1.9.1'
+    mockk_version = '1.9.3.kotlin12'
 
-    fragment_testing_version = '1.1.0-alpha04'
+    fragment_testing_version = '1.1.0-alpha07'
 
     fotoApparat_version = '2.6.1'
 
