--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,7 +16,7 @@ ext {
 
     koin_version = '1.0.2'
 
-    aac_core_version = '2.1.0-alpha02'
+    aac_core_version = '2.0.0-rc01'
 
     lifecycle_version = '2.0.0'
 
