--- a/util/src/main/AndroidManifest.xml
+++ b/util/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="be.hogent.faith.util"/>
+<manifest package="be.hogent.faith.util" />
