--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ android {
         unitTests.returnDefaultValues = true
     }
 
+    lintOptions{
+        disable "ResourceType"
+    }
+
     dataBinding {
         enabled = true
     }
