--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ script:
  - ./gradlew ktlint
  - ./gradlew test
  - ./gradlew build assembleAndroidTest
- - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI
+ - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI -s 800-1280
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
  - adb shell settings put global window_animation_scale 0
