--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,9 @@ before_install:
  - yes | sdkmanager "platforms;android-28"
 
 script:
- - ./gradlew ktlint
- - ./gradlew test
- - ./gradlew build assembleAndroidTest
+ - ./gradlew ktlint || travis_terminate 1
+ - ./gradlew test || travis_terminate 1
+ - ./gradlew build assembleAndroidTest || travis_terminate 1
  - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI -s 800-1280
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
@@ -43,7 +43,7 @@ script:
  - adb shell settings put global animator_duration_scale 0
  - adb shell input keyevent 82 &
  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
- - ./gradlew connectedCheck
+ - ./gradlew connectedCheck || travis_terminate 1
 
 before_cache:
  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
