--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,7 @@ dependencies {
     implementation uiDependencies.fotoApparat
     implementation uiDependencies.fotoApparatAdapters
     implementation uiDependencies.navigation
+    implementation uiDependencies.texteditor
 
     //TESTING
     debugImplementation androidTestDependencies.fragmentTesting
