--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -51,6 +51,8 @@ ext {
 
     fotoApparat_version = '2.6.1'
 
+    textEditor_version = '1.2.2'
+
     commonDependencies = [
             kotlin            : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
 
@@ -109,7 +111,9 @@ ext {
             fotoApparatAdapters: "io.fotoapparat.fotoapparat:adapter-rxjava2:$fotoApparat_version",
             rv_selection    : "androidx.recyclerview:recyclerview-selection:$recyclerview_version",
             cardView        : "androidx.cardview:cardview:$cardview_version",
-            navigation      :  "com.google.android.material:material:$material_version"
+            navigation      :  "com.google.android.material:material:$material_version",
+            texteditor :  "jp.wasabeef:richeditor-android:$textEditor_version"
+
     ]
 
 }
