--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders = [auth0Domain: "@string/com_auth0_domain", auth0Scheme: "demo"]
     }
     buildTypes {
         release {
@@ -62,6 +63,9 @@ dependencies {
     implementation project(':storage')
     implementation project(':draw')
     implementation project(':util')
+
+
+    implementation authdependencies.auth0;
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
