--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     implementation project(':util')
 
 
-    implementation authdependencies.auth0;
+    implementation authdependencies.auth0
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -97,6 +97,11 @@ dependencies {
     implementation uiDependencies.fotoApparatAdapters
     implementation uiDependencies.navigation
     implementation uiDependencies.texteditor
+
+    implementation uiDependencies.materialdrawer
+    implementation uiDependencies.annotation
+    implementation uiDependencies.material
+
 
     //TESTING
     debugImplementation androidTestDependencies.fragmentTesting
