--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,6 +11,8 @@ ext {
     cardview_version = '1.0.0'
     material_version='1.0.0'
 
+    androidX = '1.0.0'
+
     coroutines_version = '1.1.1'
     coroutines_android_version = '1.1.1'
 
@@ -53,6 +55,8 @@ ext {
 
     textEditor_version = '1.2.2'
 
+    materialdrawer_version = '2.0.1'
+
     commonDependencies = [
             kotlin            : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
 
@@ -67,7 +71,7 @@ ext {
     ]
 
     androidDependencies = [
-            appcompat: "androidx.appcompat:appcompat:$appcompat_version",
+            appcompat: "androidx.appcompat:appcompat:$androidX",
             lifecycle: "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     ]
 
@@ -106,13 +110,16 @@ ext {
             fragment           : "androidx.fragment:fragment:$fragment_version",
             glide              : "com.github.bumptech.glide:glide:$glide_version",
             glidecompiler      : "com.github.bumptech.glide:compiler:$glide_version",
-            recyclerview       : "com.android.support:recyclerview-v7:$recyclerview_version",
+            recyclerview       : "androidx.recyclerview:recyclerview:$androidX",
+            annotation         :  "androidx.annotation:annotation:${androidX}",
             fotoApparat        : "io.fotoapparat:fotoapparat:$fotoApparat_version",
             fotoApparatAdapters: "io.fotoapparat.fotoapparat:adapter-rxjava2:$fotoApparat_version",
-            rv_selection    : "androidx.recyclerview:recyclerview-selection:$recyclerview_version",
-            cardView        : "androidx.cardview:cardview:$cardview_version",
-            navigation      :  "com.google.android.material:material:$material_version",
-            texteditor :  "jp.wasabeef:richeditor-android:$textEditor_version"
+            rv_selection        : "androidx.recyclerview:recyclerview-selection:$androidX",
+            cardView            : "androidx.cardview:cardview:$androidX",
+            navigation          :  "com.google.android.material:material:$material_version",
+            texteditor          :  "jp.wasabeef:richeditor-android:$textEditor_version",
+            material            : "com.google.android.material:material:${androidX}",
+            materialdrawer      : "co.zsmb:materialdrawer-kt:$materialdrawer_version"
 
     ]
 
