chore: clean up gradle files

--- a/database/build.gradle
+++ b/database/build.gradle
@@ -66,7 +66,7 @@ dependencies {
         exclude group:'com.jakewharton.threetenabp', module:'threetenabp'
     }
 
-    androidTestImplementation androidTestDependencies.testRunner
+    androidTestImplementation androidTestDependencies.androidJunit
     androidTestImplementation androidTestDependencies.espresso
     androidTestImplementation androidTestDependencies.aac_core
     androidTestImplementation databaseDependencies.room_testing
