--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,6 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-
-        classpath 'com.github.trevjonez.composer-gradle-plugin:plugin:0.10.0'
         classpath 'com.android.tools.build:gradle:3.5.0'
     }
 }
@@ -101,10 +99,6 @@ dependencies {
     implementation uiDependencies.annotation
     implementation uiDependencies.material
 
-
-    //TESTING
-    debugImplementation androidTestDependencies.fragmentTesting
-
     //Use Java library for unit testing instead of Android to avoid requesting Android Device Timezone
     testImplementation(testDependencies.threeTenBP) {
         exclude group: 'com.jakewharton.threetenabp', module: 'threetenabp'
@@ -116,7 +110,7 @@ dependencies {
 
     androidTestImplementation androidTestDependencies.testCore
     androidTestImplementation androidTestDependencies.testRules
-    androidTestImplementation androidTestDependencies.testRunner
+    androidTestImplementation androidTestDependencies.androidJunit
     androidTestImplementation androidTestDependencies.espresso
 
     androidTestImplementation androidTestDependencies.espressoContrib
