--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,36 +4,13 @@ ext {
     androidMinSdkVersion = 21
     androidTargetSdkVersion = 28
 
-    constraint_layout_version = '2.0.0-alpha3'
-    fragment_version = '1.2.0-alpha02'
-    recyclerview_version = '1.1.0-beta03'
-    recyclerview_selection_version = '1.1.0-alpha06'
-    glide_version = '4.9.0'
-    cardview_version = '1.0.0'
-    material_version = '1.1.0-alpha09'
-
-    androidX = '1.1.0'
-    anroidx_junit_version = '1.1.1'
-
+    // APP LIBRARIES
     coroutines_version = '1.1.1'
     coroutines_android_version = '1.1.1'
-
     koin_version = '2.0.1'
-
-    aac_core_version = '2.1.0-rc01'
-
-    lifecycle_version = '2.2.0-alpha03'
-
+    aac_core_version = '2.0.1'
+    lifecycle_version = '2.0.0'
     appcompat_version = '1.0.2'
-
-    testrunner_version = '1.3.0-alpha02'
-    testcore_version = '1.1.0'
-
-    espresso_core_version = '3.3.0-alpha02'
-    espresso_contrib_version = '3.3.0-alpha02'
-
-    uiAutomator_version = '2.2.0'
-    junit_version = '4.12'
 
     threeTenABP_version = '1.2.1'
     threeTenBP_version = '1.4.0'
@@ -42,25 +19,42 @@ ext {
     rxjava_android_version = '2.1.1'
     rxkotlin_version = '2.3.0'
 
-    room_runtime_version = '2.2.0-alpha02'
-    room_compiler_version = '2.1.0-alpha03'
-    room_testing_version = '2.2.0-alpha02'
-    room_rxjava_version = '2.1.0-alpha03'
-
-    ktlint_version = '0.31.0'
-
-    mockk_version = '1.9.3.kotlin12'
-
-    fragment_testing_version = '1.2.0-alpha02'
+    room_version = '2.1.0'
 
     fotoApparat_version = '2.6.1'
 
-    textEditor_version = '1.2.2'
-
-    materialdrawer_version = '2.0.1'
-
     annotation_version = '1.1.0'
 
+    // UI LIBRARIES
+    constraint_layout_version = '2.0.0-beta1'
+    fragment_version = '1.0.0'
+
+    recyclerview_version = '1.1.0-beta03'
+    recyclerview_selection_version = '1.1.0-alpha06'
+
+    glide_version = '4.9.0'
+    cardview_version = '1.0.0'
+    material_version = '1.1.0-alpha09'
+    textEditor_version = '1.2.2'
+    materialdrawer_version = '2.0.1'
+
+    design_version = '28.0.0'
+
+
+    // TESTING LIBRARIES
+    test_core_version = '1.2.0'
+    espresso_version = '3.2.0'
+    espresso_contrib_version = '3.3.0-alpha02'
+    android_junit_version = '1.1.1'
+    test_runner_version = '1.2.0'
+    test_rules_version = '1.2.0'
+
+    uiAutomator_version = '2.2.0'
+    junit_version = '4.12'
+    mockk_version = '1.9.3.kotlin12'
+
+    // OTHER LIBRARIES
+    ktlint_version = '0.31.0'
 
     commonDependencies = [
             kotlin            : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
@@ -88,13 +82,13 @@ ext {
     ]
 
     androidTestDependencies = [
-            testCore       : "androidx.test:core:$testcore_version",
-            testRunner     : "androidx.test.ext:junit:$anroidx_junit_version",
-            espresso       : "androidx.test.espresso:espresso-core:$espresso_core_version",
+            testCore       : "androidx.test:core:$test_core_version",
+            androidJunit   : "androidx.test.ext:junit:$android_junit_version",
+            espresso       : "androidx.test.espresso:espresso-core:$espresso_version",
             aac_core       : "androidx.arch.core:core-testing:$aac_core_version",
-            testRules      : "androidx.test:rules:$testrunner_version",
+            testRules      : "androidx.test:rules:$test_rules_version",
+            testRunner     : "androidx.test:runner:$test_runner_version",
             espressoContrib: "androidx.test.espresso:espresso-contrib:$espresso_contrib_version",
-            fragmentTesting: "androidx.fragment:fragment-testing:$fragment_testing_version",
             uiAutomator    : "androidx.test.uiautomator:uiautomator:$uiAutomator_version"
     ]
 
@@ -104,10 +98,10 @@ ext {
     ]
 
     databaseDependencies = [
-            room         : "androidx.room:room-runtime:$room_runtime_version",
-            room_rxjava  : "android.arch.persistence.room:rxjava2:$room_rxjava_version",
-            room_compiler: "androidx.room:room-compiler:$room_compiler_version",
-            room_testing : "androidx.room:room-testing:$room_testing_version"
+            room         : "androidx.room:room-runtime:$room_version",
+            room_rxjava  : "androidx.room:room-rxjava2:$room_version",
+            room_compiler: "androidx.room:room-compiler:$room_version",
+            room_testing : "androidx.room:room-testing:$room_version"
     ]
 
     uiDependencies = [
@@ -123,8 +117,8 @@ ext {
             cardView           : "androidx.cardview:cardview:$cardview_version",
             texteditor         : "jp.wasabeef:richeditor-android:$textEditor_version",
             material           : "com.google.android.material:material:$material_version",
-            materialdrawer     : "co.zsmb:materialdrawer-kt:$materialdrawer_version"
-
+            materialdrawer     : "co.zsmb:materialdrawer-kt:$materialdrawer_version",
+            design             : "com.android.support:design:$design_version"
     ]
 
     authdependencies = [
