--- a/draw/build.gradle
+++ b/draw/build.gradle
@@ -30,17 +30,20 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     def commonDependencies = rootProject.ext.commonDependencies
+    def androidTestDependencies = rootProject.ext.androidTestDependencies
+    def androidDependencies = rootProject.ext.androidDependencies
+    def uiDependencies = rootProject.ext.uiDependencies
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:design:28.0.0'
-
-    testImplementation testDependencies.mockk
-
+    implementation commonDependencies.kotlin
     implementation commonDependencies.coroutines_core
     implementation commonDependencies.coroutines_android
+    implementation androidDependencies.appcompat
+    implementation uiDependencies.constraintLayout
+    implementation uiDependencies.design
+
+    testImplementation testDependencies.junit
+    testImplementation testDependencies.mockk
+
+    androidTestImplementation androidTestDependencies.testRunner
+    androidTestImplementation androidTestDependencies.espresso
 }
