test: setup injection for tests
An extra TestModule was added so that testspecific injections
can be done.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,7 @@ dependencies {
     testImplementation testDependencies.junit
     testImplementation testDependencies.mockk
     testImplementation testDependencies.coreTesting
+    testImplementation testDependencies.koinTesting
 
     androidTestImplementation androidTestDependencies.testCore
     androidTestImplementation androidTestDependencies.testRules
