--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ apply from: 'dependencies.gradle'
 buildscript {
     ext.kotlin_version = '1.3.50'
     ext.gradle_version = '3.5.0'
+    ext.google_services = '4.3.2'
     repositories {
         google()
         jcenter()
@@ -13,6 +14,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.gms:google-services:$google_services"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
