--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,6 +25,8 @@ ext {
 
     annotation_version = '1.1.0'
 
+    firebase_analytics ='17.2.0'
+
     // UI LIBRARIES
     constraint_layout_version = '2.0.0-beta1'
     fragment_version = '1.0.0'
@@ -103,6 +105,10 @@ ext {
             room_rxjava  : "androidx.room:room-rxjava2:$room_version",
             room_compiler: "androidx.room:room-compiler:$room_version",
             room_testing : "androidx.room:room-testing:$room_version"
+    ]
+
+    firebaseDependencies = [
+            analytics : "com.google.firebase:firebase-analytics:$firebase_analytics"
     ]
 
     uiDependencies = [
