[fix] Add timber and change logging

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     implementation commonDependencies.rxjava
     implementation commonDependencies.rxandroid
 
+    implementation commonDependencies.timber
+
     implementation injectionDependencies.koin
     implementation injectionDependencies.koin_viewModel
 
