--- a/database/build.gradle
+++ b/database/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     //firebase components
     implementation 'com.github.FrangSierra:RxFirebase:1.5.6'
     implementation 'com.google.firebase:firebase-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-firestore:21.1.1'
 
     //test
     testImplementation testDependencies.junit
