--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,8 @@ dependencies {
     implementation commonDependencies.navktx
     implementation commonDependencies.navui
 
+    implementation uiDependencies.viewpager2
+
     //Use Java library for unit testing instead of Android to avoid requesting Android Device Timezone
     testImplementation(testDependencies.threeTenBP) {
         exclude group: 'com.jakewharton.threetenabp', module: 'threetenabp'
