implement insert of an event in firebase

--- a/service/build.gradle
+++ b/service/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation commonDependencies.kotlin
     implementation commonDependencies.threeTenABP
     implementation commonDependencies.rxjava
+    implementation commonDependencies.rxkotlin
 
     implementation injectionDependencies.koin
 
