--- a/database/build.gradle
+++ b/database/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
+
 android {
     def globalConfig = rootProject.extensions.getByName("ext")
     compileSdkVersion globalConfig["androidCompileSdkVersion"]
@@ -63,6 +64,9 @@ dependencies {
     implementation 'com.github.FrangSierra:RxFirebase:1.5.6'
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.firebase:firebase-firestore:21.1.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+
+
 
     //test
     testImplementation testDependencies.junit
@@ -80,3 +84,5 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
+
