--- a/database/build.gradle
+++ b/database/build.gradle
@@ -61,12 +61,10 @@ dependencies {
     kapt databaseDependencies.room_compiler
 
     //firebase components
-    implementation 'com.github.FrangSierra:RxFirebase:1.5.6'
-    implementation 'com.google.firebase:firebase-auth:19.0.0'
-    implementation 'com.google.firebase:firebase-firestore:21.1.1'
-    implementation 'com.google.firebase:firebase-storage:19.1.0'
-
-
+    implementation firebaseDependencies.rxfirebase
+    implementation firebaseDependencies.firebaseauth
+    implementation firebaseDependencies.firestore
+    implementation firebaseDependencies.firebasestorage
 
     //test
     testImplementation testDependencies.junit
